# forge

./: .dockerignore  .forge.yaml  .gitignore  .shellcheckrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile.linter  GOVERNANCE.md  LICENSE  NOTICE  README.md  SECURITY.md  Taskfile.yml
.claude/: settings.json
.claude/agents/: api-designer.md  cross-layer-orchestrator.md  demeter.md  document-specialist.md  forge-master.md  hermes-async.md  iris-web.md  product-analyst.md  sibyl.md  themis.md
.claude/agents/flutter/: ai-specialist.md  widget-artist.md
.claude/agents/rust/: tdd-bdd.md
.claude/commands/forge/: init.md  metrics.md  onboard.md  specify.md
.claude/skills/forge-docs/: SKILL.md
.forge/: constitution.md  framework-owned-paths.yml
.forge/_memory/: b7-ai-native-rag-exploration.md  b8-observability-rearch-exploration.md  lesson-b8-coroot-3-cumulative.md
.forge/baselines/: full-stack-monorepo-1.0.0.span-inventory.yaml
.forge/changes/a7-forge-upgrade/: .forge.yaml  design.md  proposal.md  specs.md  tasks.md
.forge/changes/b1-1-dev-up-matrix-fixes/: .forge.yaml  design.md  evidence.md  open-questions.md  proposal.md  specs.md  tasks.md
.forge/changes/b1-delivery/: .forge.yaml  design.md  proposal.md  specs.md  tasks.md
.forge/changes/b1-foundations/: .forge.yaml  design.md  proposal.md  specs.md  tasks.md
.forge/changes/b1-scaffolder/: .forge.yaml  design.md  proposal.md  specs.md  tasks.md
.forge/changes/b1-workflow/: .forge.yaml  design.md  proposal.md  specs.md  tasks.md
.forge/data/: cloud-act-publishers.yml
.forge/product/: mission.md  roadmap.md
.forge/research/: b6-2-verify-then-pin.md  b6-7-live-codegen.md  b7-10-verify-then-pin.md  b7-2-verify-then-pin.md  b7-6-live-codegen.md  b7-standards-verify-then-pin.md
.forge/scaffolding/: dispatch-table.yml
.forge/schemas/: archetype.schema.json  change.schema.json  compliance-tier.schema.json  standard.schema.json
.forge/scripts/: constitution-linter.sh  validate-change-yaml.sh  validate-foundations.sh  verify.sh
.forge/specs/: adr-ratification.md  ai-native-rag.md  b8-baseline.md  b8-connect-rpc.md  b8-e2e-migration.md  b8-envoy-gateway.md  b8-legacy-snapshot.md  b8-migrate-flagship.md  b8-nsma-linter.md  b8-orchestration-temporal.md  b8-postgres-pgvector.md  b8-qwik-web-public.md  b8-schema-candidate.md  b8-signoz-unified.md  b8-validator-versioned-schema.md  b8-zitadel.md  change-yaml-schema.md  compliance-tiers.md  connect-codegen.md  data-stewardship.md  event-driven-eu.md  example-reference.md  forge-ci.md  full-stack-monorepo.md  governance.md  init-wizard.md  janus-rules.md  linter-extension.md  mobile-only.md  open-questions.md  otel-app.md  otel-dartastic-realign.md  otel-stack.md  otel-traceparent-e2e.md  platform-verification.md  promotion-flip.md  promotion-prep.md  qwik-frontend.md  rollback-runbook.md  standards-yaml-validation.md  (+2 more)
.forge/standards/: REVIEW.md  gateway.yaml  identity.yaml  index.yml  observability.yaml  orchestration.yaml  persistence.yaml  state-management.yaml  transport.yaml  web-frontend.yaml
.forge/templates/: change.yaml  open-questions.md.tmpl
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  spec-clarification.yml
.github/workflows/: forge-ci.yml  forge-compliance.yml  forge-standards-review.yml
.notes/: blockers.md
.omc/: notepad.md  pr-draft-v0.3.0.md  project-memory.json
.omc/sessions/: 2f8df784-0849-4d31-bd99-d0fbf36e2938.json  45422617-9a78-4026-8b13-0fe0f463d38d.json  6856de19-3326-4215-a203-f5f3ec881209.json  7599cc56-a362-4e24-a30f-5371886115f4.json  789d2498-decc-4163-8c70-206e13f3a834.json  8becd9b1-2b8f-4305-87d7-16b019827559.json  dc898924-e849-413c-aa7a-bd404355829d.json  f74cb3ba-fc0f-4639-9c00-09fa1194d9df.json
.omc/state/: subagent-tracking.json
cli/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
cli/scripts/: bundle-assets.mjs  prepublish-smoke.mjs
cli/src/: cli.ts  index.ts
cli/test/: global-setup.ts
docs/: ARCHETYPES.md  ARCHITECTURE-TARGET.md  ARCHITECTURE.md  B8-BASELINE.md  COMPLIANCE.md  CONTRIBUTING.md  GUIDE.md  LINTING.md  MIGRATION-PATHS.md  MIGRATIONS.md  OPEN_QUESTIONS.md  ROLLBACK.md  SCHEMA.md  STANDARDS-LIFECYCLE.md  VERSIONING.md  comparatif_sdd.md  medium.md  new-archetypes-plan.md
examples/: README.md
examples/forge-eda-example/: .env.example  .forge.yaml  .gitignore  CLAUDE.md  README.md  Taskfile.yml  docker-compose.dev.yml
examples/forge-eda-example/backend/bin-server/: Cargo.toml
examples/forge-eda-example/backend/bin-server/src/: wiring.rs
examples/forge-fsm-example/: .env.example  .forge.yaml  .gitignore  CLAUDE.md  README.md  Taskfile.yml  docker-compose.dev.yml
examples/forge-fsm-example/backend/bin-server/: Cargo.toml
examples/forge-fsm-example/backend/bin-server/src/: main.rs
examples/forge-fsm-example/backend/crates/application/: Cargo.toml
examples/forge-fsm-example/backend/crates/application/src/: greet.rs  lib.rs
examples/forge-fsm-example/backend/crates/infrastructure/: Cargo.toml
examples/forge-fsm-example/backend/crates/infrastructure/src/: lib.rs
examples/forge-fsm-example/backend/crates/infrastructure/src/telemetry/: middleware.rs  mod.rs  propagation.rs
examples/forge-rag-example/: .env.example  .forge.yaml  CLAUDE.md  README.md  Taskfile.yml  docker-compose.dev.yml
examples/forge-rag-example/backend/: CLAUDE.md  Cargo.toml
examples/forge-rag-example/backend/bin-server/src/: main.rs
examples/forge-rag-example/backend/llm_gateway/: README.md
examples/forge-rag-example/backend/llm_gateway/src/: audit.rs  fallback.rs  handler.rs  lib.rs
examples/forge-rag-example/backend/mcp/: Cargo.toml  README.md
examples/forge-rag-example/backend/mcp/src/: lib.rs  transport.rs
examples/forge-rag-example/backend/mcp/src/transport/: http.rs
examples/forge-rag-example/backend/rag/: Cargo.toml  README.md
examples/forge-rag-example/backend/rag/src/: chunking.rs  embeddings.rs  retrieval.rs
scripts/: release-v0.3.0.sh  release.sh
(+1151 files in other folders)
